# doma

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: amd_controller.rs  dynlib.rs  gpu_controller.rs  main.rs  nvidia_controller.rs  utils.rs
src/cuda/: kernel.cu  kernel.ptx
src/hip/: kernel.hip  kernel.hsaco
