[package]
name = "doma"
version = "0.1.0"
edition = "2024"
description = "Guarantee the minimum of GPU utilization percentage."
authors = ["TideDra <gearyzhang@outlook.com>"]
license = "MIT"
repository = "https://github.com/TideDra/doma"
documentation = "https://github.com/TideDra/doma/blob/main/README.md"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
ctrlc = "3.5.1"
cust = "0.3.2"
env_logger = "0.11.8"
log = "0.4.28"
nvml-wrapper = "0.11.0"
